Fixed slight chart label overflow upon zoom in

--- a/src/components/EquipmentStatusPanel/EquipmentStatusPanel.scss
+++ b/src/components/EquipmentStatusPanel/EquipmentStatusPanel.scss
@@ -19,7 +19,7 @@
     align-items: center;
     height: 80%;
     width: 20%;
-    gap: var(--spacing-4);
+    gap: var(--spacing-2);
   }
 
   &__doughnut-chart {
